Fix spacing in author's page icons

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -86,6 +86,12 @@
    Spacing Consistency
    ------------------------------------------------------------ */
 
+.author-links {
+  display: flex;
+  gap: 12px;      // this is what you want
+  align-items: center;
+}
+
 ul.list-unstyled {
   margin-left: 0;
   padding-left: 0;
